# mcsh

./: .gitignore  Cargo.toml  README.md  STD.md  SYNTAX.md  print.mcsh  test.mcsh
examples/: test.mcsh  test_match.mcsh
src/: format.rs  main.rs  manifest.rs
src/atoi/: mod.rs  stack.rs
src/atoi/core/: macros.rs  mod.rs  read_def.rs  read_expr.rs  read_stmt.rs
src/ir/: mod.rs
src/ir/compile/: binary_search.rs  memory.rs  miscellaneous.rs  mod.rs
src/ir/simulate/: mod.rs
src/parse/: entity_selector.rs  error.rs  mod.rs  parse_file.rs
src/parse/lexer/: mod.rs  parse.rs
