[package]
name = "mcsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nom = "7.1"
thiserror = "1.0"
const_format = "0.2"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
